# storytropolis

./: .README.md  .gitignore  Cargo.toml  README.md
migrations/: 0001_init.sql
notes/: index mockup.xcf
src/: auth.rs  auth_code_shared.rs  db.rs  email.rs  main.rs  middleware.rs  resource_mgr.rs  resources.rs  routes.rs  routes_utils.rs  utils.rs
static/: privacy.html  terms.html
static/css/: app.css  app.css.map
static/js/: admin_page.js  app.js  dashboard.js  edit_client_form.js  edit_post.js  error_page.js  globals.js  index.js  login.js  new_book_form.js  new_client_form.js  new_post_form.js  register.js  request_verification.js  upload_form.js  utils.js  verify.js
static/scss/: app.scss
templates/: admin_page.html  blog_page.html  blog_post.html  categories.html  dashboard.html  edit_client_form_page.html  edit_post.html  error.html  header.html  index.html  insert_categories.html  login.html  menu.html  menu_items.html  new_book.html  new_client_form_page.html  new_post.html  posts_archive_item.html  posts_edit_item.html  register.html  request_verification.html  upload_page.html  verification_email.html  verify.html  view_images.html
