[package]
name = "storytropolis"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "migrate", "time"] }
tokio = {version = "1.47.2", features = ["full"]}
askama = "0.14.0"
actix-web-httpauth = "0.8.2"
actix-files = "0.6.8"
serde = "1.0.228"
serde_json = "1.0.145"
dotenvy = "0.15.7"
password-hash = "0.5.0"
# use this old rand_core version for compatibility with argon2
rand_core = "0.6"
argon2 = "0.5.3"
regex = "1.12.2"
time = { version = "0.3.44", features = ["serde"]}
anyhow = "1.0.100"
rand = "0.9.2"
rand_regex = "0.18.1"
phf = { version = "0.13.1", features = ["macros"] }
resend-rs = "0.21.1"
actix-multipart = "0.7.2"
futures-util = "0.3.32"
comrak = "0.52"
rss = "2.0.12"

[dependencies.uuid]
version = "1.23.1"
# Lets you generate random UUIDs
features = [
    "v4",
]